Release Notes

* 3/11/2015
  * various bug fixes

* 3/2/2015
  * first import