@@ -1,6 +1,7 @@
 Release Notes
 
 * 3/11/2015
+  * added vomsrenew.sh
   * various bug fixes
 
 * 3/2/2015
